added colour options
-now have more bizarre colour options 7 and 8
-made html more informative and pretty
-removed path storage because I realized it worked even without previously existing

--- a/help.html
+++ b/help.html
@@ -1,5 +1,27 @@
 <!DOCTYPE html>
 <html >
+
+<head>
+    <style>
+        html{
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            color: rgb(2, 10, 29);
+        }
+        body {
+          background-color: linen;
+        }
+        li{
+            color: #022030;
+            font-size: larger;
+        }
+        
+        h1 {
+          color: rgb(110, 41, 41);
+          margin-left: 40px;
+        }
+        </style>
+</head>
+
 <body>
 
 <h1>basics</h1>
@@ -12,10 +34,11 @@
 <h2>general fractal guidelines</h2>
 <ul>
     <li>Increase darkness cautiously, large values for darkness make it run <span style="font-weight: bold;font-size: larger;font-style: italic;">much</span> slower.</li>
-    <li>If you want to make it darker it is often better to increase the expansion first.</li>
+    <li>If you want to make it darker it is often better to adjust the expansion.</li>
     <li>The "reset" button only changes the dimensions from -2 to 2 for x and y, press it if you are lost.</li>
     <li>The "c value" is like the seed that the image is grown around. It can also be negative.</li>
     <li>I would not recommend manually adjusting the camera position, using the buttons is much easier</li>
+    <li>If you use colour presets 7 or 8, darkness won't behave normally</li>
 </ul>
 
 <h2>advice for making custom functions for x and y</h2>
@@ -23,8 +46,18 @@
     <li>For multiplication you must use "*", so 2x would not work and would need to be 2*x.</li>
     <li>When using exponents use brackets to avoid errors.</li>
     <li>You can use both "y" and "x" freely in either field.</li>
-    <li>A function that increases a value will make the program run faster while creating a smaller value will slow it down.</li>
+    <li>The smaller the values that a function creates, the slower the program will run.</li>
 </ul>
-
+<h3>Hotkeys</h3>
+<ul>
+    <li>make fractal = enter</li>
+    <li>zoom in = + or numpad 5</li>
+    <li>zoom out = -</li>
+    <li>move camera left = numpad 4</li>
+    <li>move camera down = numpad 2</li>
+    <li>move camera right = numpad 6</li>
+    <li>move camera up = numpad 8</li>
+</ul>
 </body>
+
 </html>
