renamed example files
-also removed some

--- a/help.html
+++ b/help.html
@@ -19,7 +19,7 @@
           color: rgb(110, 41, 41);
           margin-left: 40px;
         }
-        </style>
+    </style>
 </head>
 
 <body>
@@ -43,11 +43,13 @@
 
 <h2>advice for making custom functions for x and y</h2>
 <ul>
+    <li>See below the fields for valid things to use in the equations</li>
     <li>For multiplication you must use "*", so 2x would not work and would need to be 2*x.</li>
     <li>When using exponents use brackets to avoid errors.</li>
     <li>You can use both "y" and "x" freely in either field.</li>
     <li>The smaller the values that a function creates, the slower the program will run.</li>
 </ul>
+
 <h3>Hotkeys</h3>
 <ul>
     <li>make fractal = enter</li>
