--- a/backend/help.html
+++ b/backend/help.html
@@ -53,9 +53,9 @@
 <h3>Hotkeys</h3>
 <ul>
     <li>make fractal = enter</li>
-    <li>zoom in = numpad + or numpad 5</li>
+    <li>zoom in = numpad +</li>
     <li>zoom out = numpad -</li>
-    <li>move camera left = numpad 4</li>
+    <li>move camera left = numpad 4(press num lock if it isnt working)</li>
     <li>move camera down = numpad 2</li>
     <li>move camera right = numpad 6</li>
     <li>move camera up = numpad 8</li>
